dfir_rs/tests/compile-fail-stable/surface_badgeneric_type.rs
../compile-fail/surface_badgeneric_type.rs